<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JournalEgocentrique</string>
    <string name="bigImage">Photo</string>
    <string name="emoticon">Emoticon</string>
    <string name="editMessage">Insert your note here</string>
    <string name="title_activity_write_note">Write your note</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photo">Take a photo</string>
    <string name="title_activity_mood">Select your mood</string>
    <string name="done">Done</string>
    <string name="take_picture">New photo</string>
    <string name="accept">OK</string>
    <string name="delete">Abort</string>
    <string name="album_name">Daily</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_image">JournalEgocentrique</string>
    <string name="newDay">New Day</string>
    <string name="newEntry">New Entry</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_full_screen_photo">JournalEgocentrique</string>
    <string name="deleteDay">Delete Selected Day</string>
    <string name="gallery">Go to Gallery</string>
    <string name="main">Back to Home</string>
    <string name="filters">Filters</string>
    <string name="title_activity_filters">Filters</string>
    <string name="share">Share!</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="chooseNote">Tap the note you want to share</string>
    <string name="defaultImage">Set default image</string>
    <string name="size">Font size</string>
    <string name="font">Font type</string>
    <string name="update">Interval for mood and entries updating (in hours)</string>
    <string name="update_filters">Select the interval for displaying the photos</string>
    <string name="mood">Change mood</string>

    <string-array name="periodFilter">
        <item>None</item>
        <item>Last 3 days</item>
        <item>Last week</item>
        <item>Last month</item>
    </string-array>

    <!-- Preferences -->
    <!-- Don't change these -->
        <string name="PreferencesKeyFontSize">fontSize</string>
        <string name="PreferencesKeyFontTypeFace">fontTypeFace</string>
        <!-- The next one must be equal to the one saved in AppConstants -->
        <string name="PreferencesKeyTimeOut">entryTimeout</string>
    <!-- -->
    <string name="PreferencesTitle">Preferences</string>
    <string name="PreferencesEntryCategory">Entry Settings</string>
    <string name="PreferencesEntryFontSizeTitle">Font Size</string>
    <string name="PreferencesEntryFontSizeSummary">Select the font size</string>
    <string name="PreferencesEntryFontTypeFaceTitle">Font type face</string>
    <string name="PreferencesEntryFontTypeFaceSummary">Select the font typeface</string>
    <string name="PreferencesEntryTimeoutTitle">Entry Timeout</string>
    <string name="PreferencesEntryTimeoutSummary">
        Note and mood of an Entry can\'t be updated when this timeout expires
    </string>

    <!-- MainActivity -->
    <string name="ListDaysHeaderTitle">Days</string>
    <string name="ListDaysAddEntry">Add</string>

    <!-- PhotoActivity -->
    <string name="PhotoActivity_ButtonText_TakePicture">New Photo</string>
    <string name="PhotoActivity_ButtonText_SavePhoto">Save</string>
    <string name="PhotoActivity_ButtonText_SetDefault">Set Default Image</string>
    <string name="PhotoActivity_ExternalStorageError">Unable to save the Photo</string>
    <string name="share_header_title">Share</string>


</resources>
