<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PhotoActivity" >

    <ImageView
        android:id="@+id/photo"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:contentDescription="@string/bigImage"
        android:layout_weight="3"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/take_picture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="takePicture"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/accept"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="accept"
            android:text="@string/accept" />

        <Button
            android:id="@+id/defaultImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="removeImage"
            android:text="@string/defaultImage" />
    </LinearLayout>

</LinearLayout>