<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/WriteEntryButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveNote"
            android:text="@string/done" />

        <Button
            android:id="@+id/mood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setMood"
            android:text="@string/mood" />

    </LinearLayout>

    <EditText
            android:id="@+id/editNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/WriteEntryButtons"
            android:minLines="5"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/editMessage"
            android:inputType="textMultiLine"
            android:singleLine="false" >

        <requestFocus />
    </EditText>

</RelativeLayout>
