<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WriteNote" >

    <EditText
        android:id="@+id/editNote"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:ems="10"
        android:hint="@string/editMessage"
        android:inputType="textMultiLine"
        android:singleLine="false" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveNote"
            android:text="@string/done" />

        <Button
            android:id="@+id/mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setMood"
            android:text="@string/mood" />

    </LinearLayout>

</LinearLayout>